--- a/compras.html
+++ b/compras.html
@@ -13,15 +13,28 @@
 		<a href="index.html"><img class="logo" src="img/logoBlanco.png" alt="Logo"></a>
 	</header>
     <h2>¿Qué disco querés comprar?</h2>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Comprar ahora
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Subibaja</a>
-          <a class="dropdown-item" href="#">De otro planeta</a>
-        </div>
-      </div>
+      <!--Formulario-->
+
+<form id="formulario" action="enviarForm.php" method="POST" enctype="multipart/form-data">
+	<fieldset> 
+		<legend>Si querés hacer una compra, completá el formulario
+		</legend>
+			<label for="nya">Nombre y Apellido</label>
+			<input type="text" name="Nombre" maxlength="80"> 
+			<label for="mail">Correo electrónico</label>
+			<input type="text" name="mail" maxlength="100">
+			<input type="submit" name="submit" value="Enviar">
+	</fieldset>
+  </form> 
+<!--Fin Formulario-->
+
+<!-- Botón para comprar-->
+   <button id="boton">
+     Comprar ahora
+   </button>
+   <div id="popUp">
+   </div>
+
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="main.js"></script>
