--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@
 			</div>
 		</div>
 </section>
+<!-- Contenido de compra entradas-->
 <section>
 	<h2>Compra tu entrada para el próximo show</h2>
 <div class="botones" id="entradas">
-	<!-- <button id="entradas">Entradas Bs AS</button>
-	<button>Entradas Córdoba</button>
-	<button>Entradas Rosario</button> -->
+	
 </div>
 </section>
 	<!-- Contenido adicional -->	
