--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </section>
 <!-- Contenido de compra entradas-->
 <section>
-	<h2>Compra tu entrada para el próximo show</h2>
+	<h2 class="tituloCompra">Compra tu entrada para el próximo show</h2>
 <div class="botones" id="entradas">
 	
 </div>
