--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@
 			<p> La banda se formó en 2013 en el oeste de Buenos Aires. </p>
 			<p>En 2014 los Cocos se embarcaron en la producción de su primer EP en formato de demo presentándose en vivo por los lugares más clásicos del oeste.</p>
 			<p>Durante 2016 los Cocos continúa presentándose en vivo trabajando en nuevas composiciones y en proceso de preproducción de lo que será el disco debut.</p>
-			<p>Entre enero de 2017 y julio de 2018 graban su primer disco oficial que se titula “Subi Baja”, producido por Martín “El Bredda” Sanabria y masterizado por Daniel Osorio en el Ángel Mastering Estudio.</p>
-			<p>En enero de 2020 los cocos despiden “Subi baja” en Santana Bar con un lleno total. </p> 
-			<p>En plena pandemia editaron un video clip de la última presentación, y lanzaron a lo largo del año 3 canciones nuevas.</p>
-			<p>Además participaron de varios festivales nacionales e internacionales vía streaming. </p>
-			<p>En el 2021 los Cocos lanzan su último single “Tobogán”, una canción que tuvo muy buenas críticas y fue acompañado por un videoclip.</p> 	
+		<div id="js-banda"></div>
 		</div>	
+
 	</div>	
 	<div class="integrantes fondo">
 			<ul class="integrantes__lista" >
@@ -114,10 +111,9 @@
 		</div>
 </section>
 <!-- Contenido de compra entradas-->
-<section>
-	<h2 class="tituloCompra">Compra tu entrada para el próximo show</h2>
+<section class="compraEntradas">
+	<h2>Compra tu entrada para el próximo show</h2>
 <div class="botones" id="entradas">
-	
 </div>
 </section>
 	<!-- Contenido adicional -->	
@@ -180,6 +176,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="javascript/animaciones.js"></script>
 <script src="javascript/entradas.js"></script>
 <script src="javascript/main.js"></script>
 
