--- a/compras.html
+++ b/compras.html
@@ -36,26 +36,25 @@
     </div>
   </section>
     
+<!-- Botón para comprar-->
+<button class="centrarBoton" id="boton" >
+  Comprar ahora
+</button>
+<div id="popUp"></div>
+
     <!--Formulario-->
 
- <form id="formulario" action="enviarForm.php" method="POST" enctype="multipart/form-data">
+ <form class="centrarForm" id="formulario">
   <fieldset>
-        <legend>Para finalizar la compra, completá el formulario</legend>
+        <legend>Para suscribirte completa el formulario</legend>
         <label for="nya">Nombre y Apellido</label>
         <input type="text" name="Nombre" maxlength="80"/> <br>
         <label for="mail">Correo electrónico</label>
         <input type="text" name="mail" maxlength="100" placeholder="cocos@cocosmusica.com.ar" /><br>
     </fieldset>
   </form>
+  <div id="respuesta"></div>
 <!--Fin Formulario-->
-
-<!-- Botón para comprar-->
-   <button id="boton">
-     Comprar ahora
-   </button>
-   <div id="popUp"></div>
-  
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
