--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 			<img class="imgDiscos animate__animated animate__zoomInRight" src="img/otroplaneta.jpg" alt="De Otro Planeta" ></a>
 		</div>
 	</div>
-	<a href="compras.html"><button type="button" class="btn btn-light">Comprar Disco</button></a>
+<div class="aCentrar">
+<a href="compras.html"><button type="button" class="btn btn-light">Comprar Disco</button></a>
+</div>
 </section>
 </div>	
 <!-- Fin del Contenido principal -->	
@@ -178,7 +180,7 @@
 	<!-- Fin de página -->	
 	<p class="derechos">© Todos los derechos reservados</p>	
 	</footer>
-<!--Bootstrap con JS -->
+<!--Bootstrap con JS y scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	
