--- a/compras.html
+++ b/compras.html
@@ -12,9 +12,15 @@
     <header class="centralFlex">
 		<a href="index.html"><img class="logo" src="img/logoBlanco.png" alt="Logo"></a>
 	</header>
+
+
+  <!-- Contenido de Discos a comprar -->
     <h2>¿Qué disco querés comprar?</h2>
-    <section class="discosTotales">
-    <div class="discosTotales">
+
+<!--Discos para comprar-->
+    <section>
+    <div class="primerosDiscos">
+      <div class="discosTotales">
       <img class="discos" src="img/discoplaneta.jpg" alt="Disco de otro planeta">
       <button id="planeta">Agregar al carrito</button>
       <div id="popUpPlaneta"></div>
@@ -24,6 +30,8 @@
       <button id='subi'>Agregar al carrito</button>
       <div id="popUpSubi"></div>
     </div>
+  </div>
+  <div class="segundosDiscos">
     <div class="discosTotales">
       <img class="discos"  src="img/discopersonaje.jpg" alt="">
       <button id='personaje'>Agregar al carrito</button>
@@ -34,16 +42,30 @@
       <button id='locos'>Agregar al carrito</button>
       <div id="popUpLocos"></div>
     </div>
+  </div>
   </section>
     
 <!-- Botón para comprar-->
-<button class="centrarBoton" id="boton" >
+<div class="centrarBoton">
+<button id="boton" >
   Comprar ahora
 </button>
 <div id="popUp"></div>
+</div>
+<!--Sección de compra de objetos de la banda-->
+<h2>Merchandising</h2>
+<!--Buscador-->
+<div class="buscador">
+  <input type="text" name="buscador" id="buscarProductos">
+  <input type="submit" name="submit" value="Buscar" id="buscarBoton">
+</div>
+<!--Mercadería-->
+<div class="tarjetas" id="js-contenedor">
 
-    <!--Formulario-->
+</div>
+<!--Fin sección compras-->
 
+<!--Formulario-->
  <form class="centrarForm" id="formulario">
   <fieldset>
         <legend>Para suscribirte completa el formulario</legend>
@@ -56,9 +78,11 @@
   <div id="respuesta"></div>
 <!--Fin Formulario-->
 
+<!--scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="javascript/merchandising.js"></script>
     <script src="javascript/main.js"></script>
 </body>
 </html>
