--- a/compras.html
+++ b/compras.html
@@ -28,7 +28,7 @@
     <div class="discosTotales">
       <img class="discos" src="img/discosubibaja.jpg" alt="">
       <button id='subi'>Agregar al carrito</button>
-      <div id="popUpSubi"></div>
+      <div class="cart" id="popUpSubi"></div>
     </div>
   </div>
   <div class="segundosDiscos">
