--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="javascript/animaciones.js"></script> 
+<script src="javascript/data.js"></script>
 <script src="javascript/entradas.js"></script>
+
 <script src="javascript/main.js"></script>
 
 </body>
