--- a/compras.html
+++ b/compras.html
@@ -10,13 +10,10 @@
 </head>
 <body>
     <header class="centralFlex">
-		<a href="index.html"><img class="logo" src="img/logoBlanco.png" alt="Logo"></a>
+		<a id="subirIndex" href="index.html"><img class="logo" src="img/logoBlanco.png" alt="Logo"></a>
 	</header>
-
-
   <!-- Contenido de Discos a comprar -->
-    <h2>¿Qué disco querés comprar?</h2>
-
+  <h2>¿Qué disco querés comprar?</h2>
 <!--Discos para comprar-->
     <section>
     <div class="primerosDiscos">
@@ -43,15 +40,8 @@
       <div id="popUpLocos"></div>
     </div>
   </div>
-  </section>
-    
-<!-- Botón para comprar-->
-<div class="centrarBoton">
-<button id="boton" >
-  Comprar ahora
-</button>
-<div id="popUp"></div>
-</div>
+  <div id="js-productosAgregados"></div>
+  </section>   
 <!--Sección de compra de objetos de la banda-->
 <h2>Merchandising</h2>
 <!--Buscador-->
@@ -61,14 +51,13 @@
 </div>
 <!--Mercadería-->
 <div class="tarjetas" id="js-contenedor">
-
 </div>
+<h3 class="productosLocales">Adquirí estos productos en los locales de Locuras por estos mismos precios. Próximamente en la tienda online</h3>
 <!--Fin sección compras-->
-
 <!--Formulario-->
  <form class="centrarForm" id="formulario">
   <fieldset>
-        <legend>Para suscribirte completa el formulario</legend>
+        <legend>Suscribite a nuestro newsletter</legend>
         <label for="nya">Nombre y Apellido</label>
         <input type="text" name="Nombre" maxlength="80"/> <br>
         <label for="mail">Correo electrónico</label>
@@ -77,11 +66,11 @@
   </form>
   <div id="respuesta"></div>
 <!--Fin Formulario-->
-
 <!--scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="javascript/animaciones.js"></script> 
     <script src="javascript/data.js"></script>
     <script src="javascript/merchandising.js"></script>
     <script src="javascript/main.js"></script>
