--- a/compras.html
+++ b/compras.html
@@ -40,7 +40,14 @@
       <div id="popUpLocos"></div>
     </div>
   </div>
-  <div id="js-productosAgregados"></div>
+  <div id="js-productosAgregados">
+    <div class="cart"> 
+      <h5>Carrito de compras</h5>
+      <div id= "contenedorProductos"> </div>
+      <div id="js-precioTotal"></div>
+      <button id="boton">Finalizar Compra</button>
+    </div>
+  </div>
   </section>   
 <!--Sección de compra de objetos de la banda-->
 <h2>Merchandising</h2>
