--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</div>
 	</div>
 <div class="aCentrar">
-<a href="./compras.html"><button type="button" class="btn btn-light">Comprar Disco</button></a>
+<a href="compras.html"><button type="button" class="btn btn-light">Comprar Disco</button></a>
 </div>
 </section>
 </div>	
